# rss_to_opensearch

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build-and-push.yml
deploy/: feeds.json
develop/: .env  docker-compose.yml
docker/: build.sh  get_bash.sh  run.sh
infra/: .terraform.lock.hcl  main.tf  outputs.tf  variables.tf
infra/cicd/: main.tf  tf.plan  variables.tf
infra/ec2-deploy/: cloud-init.yaml.tftpl  ec2_execution_role.tf  main.tf  outputs.tf  variables.tf
infra/ec2-deploy/files/: .env.example  docker-compose.yml
infra/ec2-deploy/templates/: cloud-init.yaml
infra/scripts/: ssm_get_cloud_init_logs.sh  ssm_get_svc_logs.sh  ssm_login.sh  ssm_port_forward.sh
infra2/: main.tf  variables.tf
src/rss_to_opensearch/: __init__.py  settings.py  util.py
tests/: test_util.py
