[tool.poetry]
name = "rss_to_opensearch"
version = "0.1.0"
description = "Send RSS feeds to an OpenSearch instance."
authors = [
  "Nathan Nichols <communications@resultsmotivated.com>"
]
readme = "README.md"
packages = [{ include = "rss_to_opensearch", from = "src" }]

[tool.poetry.scripts]
rss_to_opensearch = "rss_to_opensearch.util:main"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
loguru = "^0.7.3"
opensearch-py = "^3.0.0"
curl-cffi = "^0.13.0"
feedparser = "^6.0.11"
tldextract = "^5.3.0"
pydantic = "^2.11.7"
pydantic-settings = "^2.10.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8"
black = "^24.4.2"

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["rss_to_opensearch",]

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore:.*unclosed.*:ResourceWarning",
]